--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -17,6 +17,7 @@ $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 $colors: (
   "blue": #4267b2,
+  "red": #e20f0f,
   "orange": #fbb96b,
   "pink": #fe7e73,
   "white": #fff,
