--- a/src/sass/components/_product-view-modal.scss
+++ b/src/sass/components/_product-view-modal.scss
@@ -1,7 +1,8 @@
 .product-view__modal {
   position: fixed;
   z-index: 101;
-  padding-top: 100px;
+  padding-top: 70px;
+  padding-bottom: 20px;
   left: 0;
   top: 0;
   width: 100%;
