--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,6 +18,7 @@ $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 $colors: (
   "blue": #4267b2,
   "red": #e20f0f,
+  "yellow": #fbff01,
   "orange": #fbb96b,
   "pink": #fe7e73,
   "white": #fff,
